# scan-server

./: .gitignore  Cargo.toml  Dockerfile  Readme.md
.github/workflows/: docker-publish.yaml
src/: http.rs  main.rs  paperless.rs  telegram.rs  user.rs  webdav.rs
