[package]
name = "scan-server"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.31"
env_logger = "0.10.1"
log = "0.4.20"
reqwest = { version = "0.11.23", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
warp = "0.3.6"
